# simple-temperature-module

./: CMakeLists.txt
src/: main.c
